# OBC_HAL

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
cmake/: arm-gcc.cmake
lib/: CMakeLists.txt
lib/ccl/: CMakeLists.txt  README.md
lib/ccl/include/ccl/: branch_prediction.hpp  panic.hpp  result.hpp  source_location.hpp
lib/ccl/src/: panic.cpp
nucleo_l476rg/: .mxproject  Makefile  nucleo_l476rg.ioc
nucleo_l476rg/Core/Src/: main.c
script/: build.sh  check.sh
src/: CMakeLists.txt  run.cpp  run.hpp
